--- a/checktests/Makefile
+++ b/checktests/Makefile
@@ -8,7 +8,8 @@ LIBS	= check
 
 OBJS	= check_main.o \
 		check_slist.o \
-		check_dlist.o
+		check_dlist.o \
+		check_stack.o
 
 %.o:%.c
 	$(CC) $(CFLAGS) -c $^ -o $@
